# tetris-backend

./: .gitignore  CMakeLists.txt  compile_commands.json
.cache/clangd/index/: tetris.c.782FCDD751F47F65.idx  tetris.cc.87E4E6994E1728BC.idx  tetris.h.D84FC79DC0DC80B4.idx
backend/: CMakeLists.txt  activepiece.c  pieces.c  tetris.c
backend/include/: activepiece.h  colors.h  directions.h  pieces.h  tetris.h
src/: CMakeLists.txt  game.cc  layout.cc  tetris.cc
src/include/: board.hh  game.hh
